--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,12 +8,13 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/plain_text_input"
+        android:id="@+id/cost_of_service"
         android:layout_height="wrap_content"
         android:layout_width="match_parent"
+        android:hint="Cost of Service"
+        android:inputType="numberDecimal"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:inputType="text" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
