--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,6 +26,7 @@
 
     <RadioGroup
         android:id="@+id/tip_options"
+        android:checkedButton="@id/option_twenty_percent"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical"
@@ -50,8 +51,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="OK (15%)"/>
-
     </RadioGroup>
+
+    <Switch
+        android:id="@+id/round_up_switch"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:text="Round up tip?"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tip_options"/>
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
